--- a/infra/k8s/ingress-srv.yaml
+++ b/infra/k8s/ingress-srv.yaml
@@ -14,3 +14,11 @@ spec:
             backend:
               serviceName: auth-srv
               servicePort: 3000
+          - path: /api/items?(.*)
+            backend:
+              serviceName: items-srv
+              servicePort: 3000
+          - path: /?(.*)
+            backend:
+              serviceName: client-srv
+              servicePort: 3000
