Added base React codebase and config

--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -16,6 +16,14 @@ build:
         manual:
           - src: 'src/**/*.ts'
             dest: .
+    - image: thomasblaymire/marketplace-items
+      context: items
+      docker:
+        dockerfile: Dockerfile
+      sync:
+        manual:
+          - src: 'src/**/*.ts'
+            dest: .
     - image: thomasblaymire/marketplace-client
       context: client
       docker:
