--- a/client/package.json
+++ b/client/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-   "scripts": {
+  "scripts": {
     "dev": "next"
   },
   "keywords": [],
@@ -14,13 +14,16 @@
     "@zeit/next-sass": "^1.0.1",
     "axios": "^0.20.0",
     "bootstrap": "^4.5.2",
+    "formik": "^2.1.5",
     "next": "^9.5.3",
     "next-images": "^1.4.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "styled-components": "^5.2.0"
+    "styled-components": "^5.2.0",
+    "yup": "^0.29.3"
   },
   "devDependencies": {
+    "babel-plugin-styled-components": "^1.11.1",
     "url-loader": "^4.1.0"
   }
 }
