Added sell page and image upload form

--- a/client/package.json
+++ b/client/package.json
@@ -14,11 +14,14 @@
     "@zeit/next-sass": "^1.0.1",
     "axios": "^0.20.0",
     "bootstrap": "^4.5.2",
+    "filepond": "^4.20.1",
+    "filepond-plugin-image-preview": "^4.6.4",
     "formik": "^2.1.5",
     "next": "^9.5.3",
     "next-images": "^1.4.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-filepond": "^7.0.1",
     "styled-components": "^5.2.0",
     "yup": "^0.29.3"
   },
